# mad_money

./: .gitignore  CLAUDE.md  LICENSE  main.py  pyproject.toml
docs/plans/: 2026-03-11-ohlcv-design.md  2026-03-11-ohlcv-implementation.md  2026-03-11-vif-design.md  2026-03-11-vif-implementation.md
mad_money.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mad_money/stats/: __init__.py  vif.py
src/: __init__.py  main.ipynb  main.py  settings.py
src/data/: __init__.py  ohlcv.py  ohlcv_fetch.py  ohlcv_query.py  ohlcv_storage.py  progress.py
src/data/utils/: __init__.py  ffill_impute.py  sparsity.py
src/stats/: __init__.py  vif.py
src/technical_indicators/: __init__.py  adx.py  core.py  registry.py  timeframe.py
tests/: conftest.py  test_ohlcv.py  test_ohlcv_batch_error_handling.py  test_ohlcv_behavior.py  test_ohlcv_concurrency.py  test_ohlcv_query.py  test_ohlcv_storage.py  test_progress.py  test_sparsity.py  test_technical_indicators.py  test_vif.py
